--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,27 @@
   gap: 2rem;
   flex-wrap: wrap;
 }
+.submit-btn {
+  width: 20vh;
+  padding: 0.9rem;
+  border: none;
+  border-radius: 8px;
+  background-color: var(--primary-color);
+  color: white;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.2s ease, box-shadow 0.2s ease;
+  margin-bottom: 10vh;
+}
+
+.submit-btn:hover {
+  background-color: var(--primary-hover);
+  box-shadow: 0 4px 10px rgba(0, 123, 255, 0.2);
+}
+
+.submit-btn:disabled {
+  background-color: #b0c4de; /* Un azul "apagado" */
+  cursor: not-allowed;
+  box-shadow: none;
+}
